5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1650_2731.log
== TEST (2019-04-09 18:47:34) 
-- CODE:
a = float(input("digite o coeficiente a: "))
b = float(input("digite o coeficiente b: "))
raio = float(input("digite o raio : "))
if(a > 0, b > 0) :
	print("oi")



-- OUTPUT:
oi
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:59:05) 
-- CODE:
a = float(input("digite o coeficiente a: "))
b = float(input("digite o coeficiente b: "))
raio = float(input("digite o raio : "))
if(a > 0, b > 0) :
	print("Superiores")
if(a > 0, b < 0) :
	print("Inferiores")
if(a < 0, b < 0) :
	print("Inferiores")
if(a < 0, b > 0)
	print("Superiores")



-- EXECUTION TIME:
0.147665
-- ERROR:
  File "/home/codebench/codes/1650/2731/main.py", line 10
    if(a < 0, b > 0)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:59:07) 
-- CODE:
a = float(input("digite o coeficiente a: "))
b = float(input("digite o coeficiente b: "))
raio = float(input("digite o raio : "))
if(a > 0, b > 0) :
	print("Superiores")
if(a > 0, b < 0) :
	print("Inferiores")
if(a < 0, b < 0) :
	print("Inferiores")
if(a < 0, b > 0)
	print("Superiores")



-- ERROR:
File "XXXX", line 10
    if(a < 0, b > 0)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:59:15) 
-- CODE:
a = float(input("digite o coeficiente a: "))
b = float(input("digite o coeficiente b: "))
raio = float(input("digite o raio : "))
if(a > 0, b > 0) :
	print("Superiores")
if(a > 0, b < 0) :
	print("Inferiores")
if(a < 0, b < 0) :
	print("Inferiores")
if(a < 0, b > 0) :
	print("Superiores")



-- EXECUTION TIME:
0.172955
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Superiores
Inferiores
Inferiores
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
Inferiores
Inferiores
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
Inferiores
Inferiores
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:59:17) 
-- CODE:
a = float(input("digite o coeficiente a: "))
b = float(input("digite o coeficiente b: "))
raio = float(input("digite o raio : "))
if(a > 0, b > 0) :
	print("Superiores")
if(a > 0, b < 0) :
	print("Inferiores")
if(a < 0, b < 0) :
	print("Inferiores")
if(a < 0, b > 0) :
	print("Superiores")



-- OUTPUT:
Superiores
Inferiores
Inferiores
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:01:49) 
-- CODE:
a = float(input("digite o coeficiente a: "))
b = float(input("digite o coeficiente b: "))
raio = float(input("digite o raio : "))
if(a > 0):
	if(b > 0):
		print("Superiores")
	if(b < 0) :
		print("Inferiores")
if(a < 0):
	if(b > 0):
		print("Superiores")
	if(b < 0):
		print("Inferiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:01:56) 
-- CODE:
a = float(input("digite o coeficiente a: "))
b = float(input("digite o coeficiente b: "))
raio = float(input("digite o raio : "))
if(a > 0):
	if(b > 0):
		print("Superiores")
	if(b < 0) :
		print("Inferiores")
if(a < 0):
	if(b > 0):
		print("Superiores")
	if(b < 0):
		print("Inferiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:02:04) 
-- CODE:
a = float(input("digite o coeficiente a: "))
b = float(input("digite o coeficiente b: "))
raio = float(input("digite o raio : "))
if(a > 0):
	if(b > 0):
		print("Superiores")
	if(b < 0) :
		print("Inferiores")
if(a < 0):
	if(b > 0):
		print("Superiores")
	if(b < 0):
		print("Inferiores")
-- EXECUTION TIME:
0.122794
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
